--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </span>
 
             <button class="start" onclick="sort()">Sort</button>
-            <button onclick="myFunction()">Toggle dark mode</button>
+            <!-- <button onclick="myFunction()">Toggle dark mode</button> -->
         </div>
         <br>
     </div>
@@ -62,10 +62,14 @@
         <hr>
         <div class="desc">
             <h2>About Algorithm</h2>
-            <p>ihdfiehuisu fys iuhsynro8ui vsdyt8oriuavayug</p>
+            <p class="about"> </p>
+            <p class="link"></p>
         </div>
         <div class="time">
             <h2>Time Complexity</h2>
+            <p class="time_best"></p>
+            <p class="time_worst"></p>
+            <p class="space"></p>
         </div>
 
     </div>
